Enlace App Store Zona Salsa Radio y URLs CV en .env.example
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,6 @@ RESEND_FROM_EMAIL=onboarding@resend.dev
 # Email que se muestra en el mensaje de error del formulario (y en la web si lo usas)
 NEXT_PUBLIC_CONTACT_EMAIL=
 
-# URLs de descarga del CV (PDF). Formato directo Google Drive: https://drive.usercontent.google.com/download?id=FILE_ID&confirm=t
-NEXT_PUBLIC_CV_URL_ES=
-NEXT_PUBLIC_CV_URL_EN=
+# URLs de descarga directa del CV (PDF). Formato: https://drive.usercontent.google.com/download?id=FILE_ID&confirm=t
+NEXT_PUBLIC_CV_URL_ES=https://drive.usercontent.google.com/download?id=1-PAJknQXsuADZbzIA-cNCCg1NWWdCVHU&confirm=t
+NEXT_PUBLIC_CV_URL_EN=https://drive.usercontent.google.com/download?id=10Z4Gkos0oBnEFoo5glpv3OH8inBBTD7n&confirm=t
